--- a/src/components/stylesheets/productos.css
+++ b/src/components/stylesheets/productos.css
@@ -1,7 +1,7 @@
 .grd-prdcts{
     grid-auto-rows: auto auto;
 }
-.mrgn-1rem{
+.mrgn-1rem-prdcts{
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
