--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
+
+  --nav-height: 80px
 }
-
-
 *{
   text-decoration: none;
   box-sizing: border-box;
@@ -13,11 +13,9 @@
 }
 
 /* Lista de estilos globales (A modificar) 💟 */
-
 .flex {
   display: flex;
 }
-
 .drctn-rw{
   flex-direction: row;
 }
@@ -27,7 +25,7 @@
 .crsr-pointr{
   cursor: pointer;
 }
-
+/* blocks quitarlos */
 .block{
   border-radius: 8px;
   background-color: cadetblue;
@@ -37,7 +35,7 @@
   border-radius: 8px;
   background-color: grey;
 }
-
+/* Blocks --------------- */
 .grid{
   display: grid;
   gap: 1rem;
@@ -51,20 +49,19 @@
   justify-content: flex-end;
 }
 .frst-chld{
-  margin-top: 80px; 
-  /* cambiar con un calc */
+  margin-top: var(--nav-height); 
 }
 /* ----------------------------------------------------------------------- */
 nav {
   z-index: 9999;
   width: 100%;
-  height: 80px;
+  height: var(--nav-height);
   top: 0;
   position: fixed;
   background-color: black;
 
 }
-.one-align{
+.align-strt-cntr{
   justify-content: flex-start;
   align-items: center;
 }
@@ -109,19 +106,19 @@ li {
   width: 100%;
   align-items: center;
 }
+#brgr-icon{
+  color: gray;
+  width: 2rem;
+  margin-right: 2rem;
+}
+/* A cambiar */
 .main-logo{
   width: 8rem;
-}
-.a-main-logo{
-  display: flex;
 }
 .a-main-logo:hover{
   background-color: gray;
   border-radius: 3px;
 }
-
-#brgr-icon{
-  color: gray;
-  width: 2rem;
-  margin-right: 2rem;
+.loader{
+  width: 8rem;
 }
