--- a/src/components/stylesheets/gridCard.css
+++ b/src/components/stylesheets/gridCard.css
@@ -1,14 +1,81 @@
-.grd-crd{
-    grid-auto-rows: 70% 30%;
+#grid {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente los elementos */
+    height: 100vh; /* Ajusta la altura según sea necesario */
+  }
+  
+  .card {
+    position: relative;
+    overflow: hidden;
+    width: 300px; /* Ancho fijo para todas las tarjetas */
+    height: 400px; /* Altura fija para todas las tarjetas */
+    border: 1px solid #ccc;
     border-radius: 2rem;
-}
-.grd-crd:hover{
-    background-color: rgb(55, 56, 53, 0.1);
+  }
+  
+  .card:hover {
+    background-color: rgba(55, 56, 53, 0.1);
     cursor: pointer;
-}
-.grd-crd-icon{
-    width: 22%;
-}
-.sctn-icon{
+  }
+  
+  .img-container {
+    position: relative;
+    width: 100%;
     height: 100%;
-}
+    overflow: hidden;
+  }
+  
+  .grd-crd-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+  
+  .gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0.5) 100%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .card:hover .gradient-overlay {
+    opacity: 1;
+  }
+  
+  .icon-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .card:hover .icon-overlay {
+    opacity: 1;
+  }
+  
+  .icon-overlay img {
+    width: 50px;
+    height: auto;
+  }
+  
+  .card-title {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    color: #fff;
+  }
