--- a/src/components/stylesheets/login.css
+++ b/src/components/stylesheets/login.css
@@ -1,6 +1,16 @@
 .login{
-    background-color: darkgrey;
-    height: 10rem;
+    background-color: rgba(169, 169, 169, 0.445);
+    min-height: 10rem;
     margin-bottom: 2rem;
-    padding-top: 2rem;
+}
+.login:hover{
+    background-color: rgba(169, 169, 169, 0.600);
+}
+.login-img{
+    width: 12rem;
+    height: 8rem;
+}
+
+#login > * {
+    margin: 0.5rem;
 }
